# book_search

./: README.md  pyproject.toml
book_search/: book_price_drop.py
data/: book_collection.csv  historic_data.csv
