[tool.poetry]
name = "book-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
beautifulsoup4 = ">=4.0.0"
requests = "^2.32.3"
selenium = "^4.21.0"
loguru = "^0.7.2"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
